страница объявления - карточка

--- a/src/announcement.html
+++ b/src/announcement.html
@@ -5,135 +5,126 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Объявления</title>
+    <title>Объявления / Карточка</title>
 </head>
 
 <body>
 <div class="header">
-    <div class="container-fluid">
 
-    </div>
 </div>
-<div class="content">
-    <div class="announcement">
+<div class="content ceni">
+    <ul class="breadcrumbs container-fluid">
+        <li class="breadcrumbs__item">
+            <a href="#" class="breadcrumbs__link">Объявления</a>
+        </li>
+        <li class="breadcrumbs__item">
+            <span class="breadcrumbs__text">Бетон гранит</span>
+        </li>
+    </ul>
+    <div class="ceni__products">
+        <div class="ceni__product-inner">
+            <div class="ceni__slider-images slider-ceni js-slider-ceni">
+                <div class="container-fluid">
+                    <div class="slider-wrapper">
+                        <div class="slider-ceni__slide">
+                            <img src="img/mock.png" alt="баннер">
+                        </div>
+                        <div class="slider-ceni__slide">
+                            <img src="img/mock.png" alt="баннер">
+                        </div>
+                        <div class="slider-ceni__slide">
+                            <img src="img/mock.png" alt="баннер">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="ceni__slider-description container-fluid">
+                <p class="xs mb-2 grey">Бетон гранит</p>
+                <h5 class="mb-12">Трубы лежалые 1720х20 и 1820х18 </h5>
+                <p class="sm mb-2"><strong>Описание</strong></p>
+                <p class="sm mb-3">
+                    Тяжёлые бетоны обладают большей удельной прочностью на сжатие в сравнении с лёгкими, из-за чего получили
+                    распространение в капитальном строительстве. Высокая плотность тяжёлого бетона обусловлена как
+                    используемым наполнителем, так и значительным механическим уплотнением. К плюсам тяжёлых бетонов можно
+                    отнести долговечность, высокую прочность, твёрдость и морозостойкость; к минусам — значительную
+                    стоимость производства и высокую теплопроводность.
+                </p>
+            </div>
+        </div>
+
         <div class="container-fluid">
-            <a href="/" class="move-back link mb-2">Каталог</a>
-            <h2 class="h2">Бетон гранит
-                <span class="text sm grey">340 товаров</span>
-            </h2>
+            <p class="sm pb-2 border-bottom"><strong>Организация/контактное лицо:</strong></p>
+            <p class="sm pb-2 pt-2 border-bottom"><strong>
+                Александр Александров
+            <p class="sm pb-2 pt-2 border-bottom">Москва</p>
+            <p class="sm pb-2 mb-3 pt-2 blue border-bottom">
+                <a href="mailto:alex.stroim111@gmail.com" class="link dark">alex.stroim111@gmail.com</a>
+            </p>
+            <p class="sm grey mb-32">
+                Размещена:
+                <strong>26.05.2021 </strong>в <strong>17:10</strong>
+            </p>
+            <h4 class="mb-3">Похожие товары</h4>
         </div>
-        <div class="announcement-card">
+        <div class="slider-products js-slider-products border-bottom">
             <div class="container-fluid">
-                <div class="announcement-card__head mb-2">
-                    <div class="announcement-card__image">
-                        <img src="img/mock.png" alt="">
+                <div class="slider-wrapper">
+                    <div class="slider-products__slide">
+                        <div class="slider-products__image">
+                            <img src="img/mock.png" alt="баннер">
+                        </div>
+                        <div class="slider-products__content">
+                            <p class="sm mb-2">
+                                Бетон гранит М-150 П2 F50 W2 W2 П2 F50
+                            </p>
+                            <h6 class="mb-12">4 000 руб.</h6>
+                            <a href="" class="sm link"><strong>StroitelCompany.ru</strong></a>
+                        </div>
                     </div>
-                    <div class="announcement-card__info">
-                        <p class="xs grey mb-2">Бетон гранит</p>
-                        <p class="sm mb-1">Трубы лежалые 1720х20 и 1820х18</p>
-                        <div class="status orange">Продам</div>
+                    <div class="slider-products__slide">
+                        <div class="slider-products__image">
+                            <img src="img/mock.png" alt="баннер">
+                        </div>
+                        <div class="slider-products__content">
+                            <p class="sm mb-2">
+                                Бетон гранит М-150 П2 F50 W2 W2 П2 F50
+                            </p>
+                            <h6 class="mb-12">4 000 руб.</h6>
+                            <a href="" class="sm link"><strong>StroitelCompany.ru</strong></a>
+                        </div>
                     </div>
-                </div>
-                <p class="sm mb-1">
-                    Каркас здания АБК12.4х40х11м трех этажное административно бытовое здание Каркас здания АБК
-                    12.4х40х11
-                    трех этажное административно...
-                </p>
-                <p class="sm grey mb-1">Москва</p>
-                <p class="sm mb-3">Александр Иванов</p>
-                <a href="" class="btn btn-secondary block sm mb-3">Показать телефон</a>
-                <p class="xs grey">Размещена: <strong>26.05.2021</strong> в <strong>17:10</strong></p>
-            </div>
-        </div>
-
-        <div class="announcement-card">
-            <div class="container-fluid">
-                <div class="announcement-card__head mb-2">
-                    <div class="announcement-card__image">
-                        <img src="img/mock.png" alt="">
+                    <div class="slider-products__slide">
+                        <div class="slider-products__image">
+                            <img src="img/mock.png" alt="баннер">
+                        </div>
+                        <div class="slider-products__content">
+                            <p class="sm mb-2">
+                                Бетон гранит М-150 П2 F50 W2 W2 П2 F50
+                            </p>
+                            <h6 class="mb-12">4 000 руб.</h6>
+                            <a href="" class="sm link"><strong>StroitelCompany.ru</strong></a>
+                        </div>
                     </div>
-                    <div class="announcement-card__info">
-                        <p class="xs grey mb-2">Бетон гранит</p>
-                        <p class="sm mb-1">Трубы лежалые 1720х20 и 1820х18</p>
-                        <div class="status red">Куплю</div>
+                    <div class="slider-products__slide">
+                        <div class="slider-products__image">
+                            <img src="img/mock.png" alt="баннер">
+                        </div>
+                        <div class="slider-products__content">
+                            <p class="sm mb-2">
+                                Бетон гранит М-150 П2 F50 W2 W2 П2 F50
+                            </p>
+                            <h6 class="mb-12">4 000 руб.</h6>
+                            <a href="" class="sm link"><strong>StroitelCompany.ru</strong></a>
+                        </div>
                     </div>
-                </div>
-                <p class="sm mb-1">
-                    Каркас здания АБК12.4х40х11м трех этажное административно бытовое здание Каркас здания АБК
-                    12.4х40х11
-                    трех этажное административно...
-                </p>
-                <p class="sm grey mb-1">Москва</p>
-                <p class="sm mb-3">Александр Иванов</p>
-                <a href="" class="btn btn-secondary block sm mb-3">Показать телефон</a>
-                <p class="xs grey">Размещена: <strong>26.05.2021</strong> в <strong>17:10</strong></p>
-            </div>
-        </div>
-
-        <div class="announcement-card">
-            <div class="container-fluid">
-                <div class="announcement-card__head mb-2">
-                    <div class="announcement-card__image">
-                        <img src="img/mock.png" alt="">
-                    </div>
-                    <div class="announcement-card__info">
-                        <p class="xs grey mb-2">Бетон гранит</p>
-                        <p class="sm mb-1">Трубы лежалые 1720х20 и 1820х18</p>
-                        <div class="status blue">Спрос услуг</div>
-                    </div>
-                </div>
-                <p class="sm mb-1">
-                    Каркас здания АБК12.4х40х11м трех этажное административно бытовое здание Каркас здания АБК
-                    12.4х40х11
-                    трех этажное административно...
-                </p>
-                <p class="sm grey mb-1">Москва</p>
-                <p class="sm mb-3">Александр Иванов</p>
-                <a href="" class="btn btn-secondary block sm mb-3">Показать телефон</a>
-                <p class="xs grey">Размещена: <strong>26.05.2021</strong> в <strong>17:10</strong></p>
-            </div>
-        </div>
-
-        <div class="announcement-card">
-            <div class="container-fluid">
-                <div class="announcement-card__head mb-2">
-                    <div class="announcement-card__image">
-                        <img src="img/mock.png" alt="">
-                    </div>
-                    <div class="announcement-card__info">
-                        <p class="xs grey mb-2">Бетон гранит</p>
-                        <p class="sm mb-1">Трубы лежалые 1720х20 и 1820х18</p>
-                        <div class="status green">Предложение услуги</div>
-                    </div>
-                </div>
-                <p class="sm mb-1">
-                    Каркас здания АБК12.4х40х11м трех этажное административно бытовое здание Каркас здания АБК
-                    12.4х40х11
-                    трех этажное административно...
-                </p>
-                <p class="sm grey mb-1">Москва</p>
-                <p class="sm mb-3">Александр Иванов</p>
-                <a href="" class="btn btn-secondary block sm mb-3">Показать телефон</a>
-                <p class="xs grey">Размещена: <strong>26.05.2021</strong> в <strong>17:10</strong></p>
-            </div>
-        </div>
-
-        <div class="pagination">
-            <div class="container-fluid">
-                <a class="link pagination__link pagination__link-next" href="#">Следующая</a>
-                <div class="pagination__box">
-                    <a class="link pagination__link active" href="#">1</a>
-                    <a class="link pagination__link" href="#">2</a>
-                    <a class="link pagination__link" href="#">3</a>
-                    <a class="link pagination__link" href="#">4</a>
-                    <a class="link pagination__link" href="#">5</a>
-                    <a class="link pagination__link" href="#">6</a>
-                    <a class="link pagination__link" href="#">7</a>
                 </div>
             </div>
         </div>
-
+        <div class="pt-2 pb-2 border-bottom container-fluid">
+            <a href="" class="btn btn-secondary block">Показать телефон</a>
+        </div>
     </div>
+
     <menu class="menu">
         <ul class="menu__list">
             <li class="menu__item">
@@ -183,8 +174,6 @@
             </li>
         </ul>
     </menu>
-</div>
-
 </div>
 <div class="footer">
 
