страницы тендер -карты + фиксы

--- a/src/announcement.html
+++ b/src/announcement.html
@@ -66,8 +66,8 @@
             </p>
             <h4 class="mb-3">Похожие товары</h4>
         </div>
-        <div class="slider-products js-slider-products border-bottom">
-            <div class="container-fluid">
+        <div class="container-fluid pr-0">
+            <div class="slider-products js-slider-products border-bottom">
                 <div class="slider-wrapper">
                     <div class="slider-products__slide">
                         <div class="slider-products__image">
