--- a/src/announcements.html
+++ b/src/announcements.html
@@ -41,7 +41,10 @@
                 </p>
                 <p class="sm grey mb-1">Москва</p>
                 <p class="sm mb-3">Александр Иванов</p>
-                <a href="" class="btn btn-secondary block sm mb-3">Показать телефон</a>
+                <button class="btn btn-secondary block sm mb-3 phone-btn js-show-phone">
+                    <span class="phone-btn__text">Показать телефон</span>
+                    <span class="phone-btn__number">+7 213 43 434</span>
+                </button>
                 <p class="xs grey">Размещена: <strong>26.05.2021</strong> в <strong>17:10</strong></p>
             </div>
         </div>
@@ -65,7 +68,10 @@
                 </p>
                 <p class="sm grey mb-1">Москва</p>
                 <p class="sm mb-3">Александр Иванов</p>
-                <a href="" class="btn btn-secondary block sm mb-3">Показать телефон</a>
+                <button class="btn btn-secondary block sm mb-3 phone-btn js-show-phone">
+                    <span class="phone-btn__text">Показать телефон</span>
+                    <span class="phone-btn__number">+7 213 43 434</span>
+                </button>
                 <p class="xs grey">Размещена: <strong>26.05.2021</strong> в <strong>17:10</strong></p>
             </div>
         </div>
@@ -89,7 +95,10 @@
                 </p>
                 <p class="sm grey mb-1">Москва</p>
                 <p class="sm mb-3">Александр Иванов</p>
-                <a href="" class="btn btn-secondary block sm mb-3">Показать телефон</a>
+                <button class="btn btn-secondary block sm mb-3 phone-btn js-show-phone">
+                    <span class="phone-btn__text">Показать телефон</span>
+                    <span class="phone-btn__number">+7 213 43 434</span>
+                </button>
                 <p class="xs grey">Размещена: <strong>26.05.2021</strong> в <strong>17:10</strong></p>
             </div>
         </div>
@@ -113,7 +122,10 @@
                 </p>
                 <p class="sm grey mb-1">Москва</p>
                 <p class="sm mb-3">Александр Иванов</p>
-                <a href="" class="btn btn-secondary block sm mb-3">Показать телефон</a>
+                <button class="btn btn-secondary block sm mb-3 phone-btn js-show-phone">
+                    <span class="phone-btn__text">Показать телефон</span>
+                    <span class="phone-btn__number">+7 213 43 434</span>
+                </button>
                 <p class="xs grey">Размещена: <strong>26.05.2021</strong> в <strong>17:10</strong></p>
             </div>
         </div>
