--- a/src/ui.html
+++ b/src/ui.html
@@ -203,7 +203,7 @@
             <div class="row">
                 <label>
                     <input type="checkbox" name="check-one" value="check-one" />
-                    <span>Кликни меня</span>
+                    <span class="checkbox__text">Кликни меня</span>
                 </label>
             </div>
         </div>
