страницы цены поставщиков, заявки мобайл + модалка фильтров

--- a/src/ceni-postavshikov-card.html
+++ b/src/ceni-postavshikov-card.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Объявления / Карточка</title>
+    <title>Цены поставщиков / карточка</title>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
 <div class="content ceni">
     <ul class="breadcrumbs container-fluid">
         <li class="breadcrumbs__item">
-            <a href="#" class="breadcrumbs__link">Объявления</a>
+            <a href="#" class="breadcrumbs__link">Цены поставщиков</a>
         </li>
         <li class="breadcrumbs__item">
             <span class="breadcrumbs__text">Бетон гранит</span>
@@ -39,29 +39,39 @@
                 </div>
             </div>
             <div class="ceni__slider-description container-fluid">
-                <p class="xs mb-2 grey">Бетон гранит</p>
-                <h5 class="mb-12">Трубы лежалые 1720х20 и 1820х18 </h5>
-                <p class="sm mb-2"><strong>Описание</strong></p>
-                <p class="sm mb-3">
-                    Тяжёлые бетоны обладают большей удельной прочностью на сжатие в сравнении с лёгкими, из-за чего получили
-                    распространение в капитальном строительстве. Высокая плотность тяжёлого бетона обусловлена как
-                    используемым наполнителем, так и значительным механическим уплотнением. К плюсам тяжёлых бетонов можно
-                    отнести долговечность, высокую прочность, твёрдость и морозостойкость; к минусам — значительную
-                    стоимость производства и высокую теплопроводность.
-                </p>
+                <h5 class="mb-2">Бетон гранит М-150 П2</h5>
+                <h3 class="mb-3">4 000 руб</h3>
+                <h6 class="mb-2">Характеристики</h6>
+                <p class="sm mb-12"><span class="grey">Размер:</span> M - 150</p>
+                <p class="sm mb-12"><span class="grey">Сорт:</span> F100 W4</p>
+                <p class="sm mb-3"><span class="grey">Примечение:</span> B - 10/12,5</p>
             </div>
         </div>
 
         <div class="container-fluid">
-            <p class="sm pb-2 border-bottom"><strong>Организация/контактное лицо:</strong></p>
-            <p class="sm pb-2 pt-2 border-bottom"><strong>
-                Александр Александров
+            <h6 class="mb-2">Описание</h6>
+            <p class="sm mb-3">
+                Тяжёлые бетоны обладают большей удельной прочностью на сжатие в сравнении с лёгкими, из-за чего получили
+                распространение в капитальном строительстве. Высокая плотность тяжёлого бетона обусловлена как
+                используемым наполнителем, так и значительным механическим уплотнением. К плюсам тяжёлых бетонов можно
+                отнести долговечность, высокую прочность, твёрдость и морозостойкость; к минусам — значительную
+                стоимость производства и высокую теплопроводность.
+            </p>
+            <p class="sm pb-2 border-bottom"><strong>Поставщик:</strong></p>
+            <p class="sm pb-2 pt-2 blue border-bottom"><strong>
+                <span>StroitelCompany.ru</span>
+                <span>
+                    <img src="img/icons/star.svg" alt="">
+                    <img src="img/icons/star.svg" alt="">
+                    <img src="img/icons/star-empty.svg" alt="">
+                </span>
+            </strong></p>
             <p class="sm pb-2 pt-2 border-bottom">Москва</p>
             <p class="sm pb-2 mb-3 pt-2 blue border-bottom">
-                <a href="mailto:alex.stroim111@gmail.com" class="link dark">alex.stroim111@gmail.com</a>
+                <a href="">+ 7 Показать номер</a>
             </p>
             <p class="sm grey mb-32">
-                Размещена:
+                Опубликовано:
                 <strong>26.05.2021 </strong>в <strong>17:10</strong>
             </p>
             <h4 class="mb-3">Похожие товары</h4>
@@ -120,14 +130,12 @@
                 </div>
             </div>
         </div>
+
     </div>
 
     <menu class="menu">
         <div class="pt-2 pb-2 border-bottom container-fluid">
-            <button class="btn btn-secondary block phone-btn js-show-phone">
-                <span class="phone-btn__text">Показать телефон</span>
-                <span class="phone-btn__number">+7 213 43 434</span>
-            </button>
+            <a href="" class="btn btn-primary block">В коррзину</a>
         </div>
         <ul class="menu__list">
             <li class="menu__item">
