--- a/src/ceni-postavshikov.html
+++ b/src/ceni-postavshikov.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Цены поставщиков</title>
+    <title>Цены поставщиков / Карточка</title>
 </head>
 
 <body>
@@ -13,125 +13,140 @@
 
 </div>
 <div class="content ceni">
-    <ul class="breadcrumbs container-fluid">
-        <li class="breadcrumbs__item">
-            <a href="#" class="breadcrumbs__link">Цены поставщиков</a>
-        </li>
-        <li class="breadcrumbs__item">
-            <span class="breadcrumbs__text">Бетон гранит</span>
-        </li>
-    </ul>
-    <div class="ceni__products">
-        <div class="ceni__product-inner">
-            <div class="ceni__slider-images slider-ceni js-slider-ceni">
-                <div class="container-fluid">
-                    <div class="slider-wrapper">
-                        <div class="slider-ceni__slide">
-                            <img src="img/mock.png" alt="баннер">
-                        </div>
-                        <div class="slider-ceni__slide">
-                            <img src="img/mock.png" alt="баннер">
-                        </div>
-                        <div class="slider-ceni__slide">
-                            <img src="img/mock.png" alt="баннер">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="ceni__slider-description container-fluid">
-                <h5 class="mb-2">Бетон гранит М-150 П2</h5>
-                <h3 class="mb-3">4 000 руб</h3>
-                <h6 class="mb-2">Характеристики</h6>
-                <p class="sm mb-12"><span class="grey">Размер:</span> M - 150</p>
-                <p class="sm mb-12"><span class="grey">Сорт:</span> F100 W4</p>
-                <p class="sm mb-3"><span class="grey">Примечение:</span> B - 10/12,5</p>
-            </div>
-        </div>
+    <div class="container-fluid">
+        <a href="/" class="move-back link mb-2">Каталог</a>
+        <h2 class="h2">Бетон гранит
+            <span class="text sm grey">340 товаров</span>
+        </h2>
+    </div>
 
-        <div class="container-fluid">
-            <h6 class="mb-2">Описание</h6>
-            <p class="sm mb-3">
-                Тяжёлые бетоны обладают большей удельной прочностью на сжатие в сравнении с лёгкими, из-за чего получили
-                распространение в капитальном строительстве. Высокая плотность тяжёлого бетона обусловлена как
-                используемым наполнителем, так и значительным механическим уплотнением. К плюсам тяжёлых бетонов можно
-                отнести долговечность, высокую прочность, твёрдость и морозостойкость; к минусам — значительную
-                стоимость производства и высокую теплопроводность.
-            </p>
-            <p class="sm pb-2 border-bottom"><strong>Поставщик:</strong></p>
-            <p class="sm pb-2 pt-2 blue border-bottom"><strong>
-                <span>StroitelCompany.ru</span>
-                <span>
-                    <img src="img/icons/star.svg" alt="">
-                    <img src="img/icons/star.svg" alt="">
-                    <img src="img/icons/star-empty.svg" alt="">
-                </span>
-            </strong></p>
-            <p class="sm pb-2 pt-2 border-bottom">Москва</p>
-            <p class="sm pb-2 mb-3 pt-2 blue border-bottom">
-                <a href="">+ 7 Показать номер</a>
-            </p>
-            <p class="sm grey mb-32">
-                Опубликовано:
-                <strong>26.05.2021 </strong>в <strong>17:10</strong>
-            </p>
-            <h4 class="mb-3">Похожие товары</h4>
+    <div class="container-fluid d-flex justify-content-sm-between mb-4">
+        <a href="" class="link sm dark js-filter">
+            <img src="img/icons/filter.svg" alt="">
+            <span class="pl-2">Фильры</span>
+        </a>
+    </div>
+
+    <div class="ceni-card container-fluid">
+        <div class="ceni-card__image">
+            <img src="img/mock.png" alt="">
         </div>
-        <div class="container-fluid pr-0">
-            <div class="slider-products js-slider-products border-bottom">
-                <div class="slider-wrapper">
-                    <div class="slider-products__slide">
-                        <div class="slider-products__image">
-                            <img src="img/mock.png" alt="баннер">
-                        </div>
-                        <div class="slider-products__content">
-                            <p class="sm mb-2">
-                                Бетон гранит М-150 П2 F50 W2 W2 П2 F50
-                            </p>
-                            <h6 class="mb-12">4 000 руб.</h6>
-                            <a href="" class="sm link"><strong>StroitelCompany.ru</strong></a>
-                        </div>
-                    </div>
-                    <div class="slider-products__slide">
-                        <div class="slider-products__image">
-                            <img src="img/mock.png" alt="баннер">
-                        </div>
-                        <div class="slider-products__content">
-                            <p class="sm mb-2">
-                                Бетон гранит М-150 П2 F50 W2 W2 П2 F50
-                            </p>
-                            <h6 class="mb-12">4 000 руб.</h6>
-                            <a href="" class="sm link"><strong>StroitelCompany.ru</strong></a>
-                        </div>
-                    </div>
-                    <div class="slider-products__slide">
-                        <div class="slider-products__image">
-                            <img src="img/mock.png" alt="баннер">
-                        </div>
-                        <div class="slider-products__content">
-                            <p class="sm mb-2">
-                                Бетон гранит М-150 П2 F50 W2 W2 П2 F50
-                            </p>
-                            <h6 class="mb-12">4 000 руб.</h6>
-                            <a href="" class="sm link"><strong>StroitelCompany.ru</strong></a>
-                        </div>
-                    </div>
-                    <div class="slider-products__slide">
-                        <div class="slider-products__image">
-                            <img src="img/mock.png" alt="баннер">
-                        </div>
-                        <div class="slider-products__content">
-                            <p class="sm mb-2">
-                                Бетон гранит М-150 П2 F50 W2 W2 П2 F50
-                            </p>
-                            <h6 class="mb-12">4 000 руб.</h6>
-                            <a href="" class="sm link"><strong>StroitelCompany.ru</strong></a>
-                        </div>
-                    </div>
+        <div class="ceni-card__content">
+            <h5 class="mb-1">4 000 руб.</h5>
+            <p class="sm mb-1">Бетон гранит М-150 П2</p>
+            <p class="xs mb-1"><span class="grey">Размер: </span>М - 150</p>
+            <p class="xs mb-1"><span class="grey">Сорт: </span>М - 150</p>
+            <p class="xs mb-1"><span class="grey">Примечание: </span>М - 150</p>
+            <div class="xs d-flex align-items-start mb-1">
+                <a href="" class="link xs blue"><strong>StroitelCompany.ru</strong></a>
+                <div class="ceni-card__rating">
+                    <img src="img/icons/star.svg" alt="">
+                    <img src="img/icons/star.svg" alt="">
+                    <img src="img/icons/star.svg" alt="">
                 </div>
             </div>
+            <p class="xs grey mb-1">Москва</p>
+            <p class="xs phone-btn js-show-phone mb-12">
+                <span class="phone-btn__text">+ 7  Показать номер</span>
+                <span class="phone-btn__number">+ 7 213 43 434</span>
+            </p>
+            <a href="" class="btn btn-primary sm">В корзину</a>
         </div>
-        <div class="pt-2 pb-2 border-bottom container-fluid">
-            <a href="" class="btn btn-primary block">В коррзину</a>
+    </div>
+
+    <div class="ceni-card container-fluid">
+        <div class="ceni-card__image">
+            <img src="img/mock.png" alt="">
+        </div>
+        <div class="ceni-card__content">
+            <h5 class="mb-1">4 000 руб.</h5>
+            <p class="sm mb-1">Бетон гранит М-150 П2</p>
+            <p class="xs mb-1"><span class="grey">Размер: </span>М - 150</p>
+            <p class="xs mb-1"><span class="grey">Сорт: </span>М - 150</p>
+            <p class="xs mb-1"><span class="grey">Примечание: </span>М - 150</p>
+            <div class="xs d-flex align-items-start mb-1">
+                <a href="" class="link xs blue"><strong>StroitelCompany.ru</strong></a>
+                <div class="ceni-card__rating">
+                    <img src="img/icons/star-empty.svg" alt="">
+                    <img src="img/icons/star.svg" alt="">
+                    <img src="img/icons/star.svg" alt="">
+                </div>
+            </div>
+            <p class="xs grey mb-1">Москва</p>
+            <p class="xs phone-btn js-show-phone mb-12">
+                <span class="phone-btn__text">+ 7  Показать номер</span>
+                <span class="phone-btn__number">+ 7 213 43 434</span>
+            </p>
+            <a href="" class="btn btn-primary sm">В корзину</a>
+        </div>
+    </div>
+
+    <div class="ceni-card container-fluid">
+        <div class="ceni-card__image">
+            <img src="img/mock.png" alt="">
+        </div>
+        <div class="ceni-card__content">
+            <h5 class="mb-1">4 000 руб.</h5>
+            <p class="sm mb-1">Бетон гранит М-150 П2</p>
+            <p class="xs mb-1"><span class="grey">Размер: </span>М - 150</p>
+            <p class="xs mb-1"><span class="grey">Сорт: </span>М - 150</p>
+            <p class="xs mb-1"><span class="grey">Примечание: </span>М - 150</p>
+            <div class="xs d-flex align-items-start mb-1">
+                <a href="" class="link xs blue"><strong>StroitelCompany.ru</strong></a>
+                <div class="ceni-card__rating">
+                    <img src="img/icons/star-empty.svg" alt="">
+                    <img src="img/icons/star-empty.svg" alt="">
+                    <img src="img/icons/star.svg" alt="">
+                </div>
+            </div>
+            <p class="xs grey mb-1">Москва</p>
+            <p class="xs phone-btn js-show-phone mb-12">
+                <span class="phone-btn__text">+ 7  Показать номер</span>
+                <span class="phone-btn__number">+ 7 213 43 434</span>
+            </p>
+            <a href="" class="btn btn-primary sm">В корзину</a>
+        </div>
+    </div>
+
+    <div class="ceni-card container-fluid">
+        <div class="ceni-card__image">
+            <img src="img/mock.png" alt="">
+        </div>
+        <div class="ceni-card__content">
+            <h5 class="mb-1">4 000 руб.</h5>
+            <p class="sm mb-1">Бетон гранит М-150 П2</p>
+            <p class="xs mb-1"><span class="grey">Размер: </span>М - 150</p>
+            <p class="xs mb-1"><span class="grey">Сорт: </span>М - 150</p>
+            <p class="xs mb-1"><span class="grey">Примечание: </span>М - 150</p>
+            <div class="xs d-flex align-items-start mb-1">
+                <a href="" class="link xs blue"><strong>StroitelCompany.ru</strong></a>
+                <div class="ceni-card__rating">
+                    <img src="img/icons/star-empty.svg" alt="">
+                    <img src="img/icons/star-empty.svg" alt="">
+                    <img src="img/icons/star-empty.svg" alt="">
+                </div>
+            </div>
+            <p class="xs grey mb-1">Москва</p>
+            <p class="xs phone-btn js-show-phone mb-12">
+                <span class="phone-btn__text">+ 7  Показать номер</span>
+                <span class="phone-btn__number">+ 7 213 43 434</span>
+            </p>
+            <a href="" class="btn btn-primary sm">В корзину</a>
+        </div>
+    </div>
+
+    <div class="pagination">
+        <div class="container-fluid">
+            <a class="link pagination__link pagination__link-next" href="#">Следующая</a>
+            <div class="pagination__box">
+                <a class="link pagination__link active" href="#">1</a>
+                <a class="link pagination__link" href="#">2</a>
+                <a class="link pagination__link" href="#">3</a>
+                <a class="link pagination__link" href="#">4</a>
+                <a class="link pagination__link" href="#">5</a>
+                <a class="link pagination__link" href="#">6</a>
+                <a class="link pagination__link" href="#">7</a>
+            </div>
         </div>
     </div>
 
